# marconi-elearn

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  MILESTONES.md  README.md  USER_JOURNEY.md  review.md  spec.md
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 5a06878c9b68_init.py  (+26 more)
backend/app/: main.py
backend/scripts/: bootstrap_superadmin.py
backend/tests/: conftest.py  test_api_audit_logging.py  test_api_calendar.py  test_api_course_memberships.py  test_api_github_roster_sync.py  test_api_invites.py  test_api_metrics.py  test_api_module_ordering.py  test_api_org_course_modules_assignments_submissions.py  test_api_org_courses.py  test_api_org_memberships.py  test_api_orgs.py  test_api_playground.py  test_api_resources_and_notifications.py  test_api_session_expiry.py  test_api_staff.py  test_api_staff_grading.py  test_api_staff_grading_workflow_upgrades.py  test_api_staff_memberships_enroll_remove.py  test_api_staff_memberships_update.py  test_api_student_self_enroll.py  test_api_student_submission_tests_visibility.py  test_api_student_views.py  test_api_superadmin_stats.py  test_api_users.py  test_api_zip_submissions.py  test_assignment_model_integrity.py  test_autograde_versions_and_lock.py  test_config_db_url.py  test_crud_org_memberships.py  test_crud_organizations.py  test_crud_users.py  test_jobe_client_errors.py  test_rate_limit_dependency.py  test_worker_grading.py  test_worker_jobe_concurrency.py  test_worker_queue_lifecycle.py  test_zip_extract.py
(+246 files in other folders)
